ELK Logging stack setup

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 production.env
 development.env
 .history
-/home/sidravic/Dropbox/code/workspace/rails_apps/idylmynds/first-hammar/stateful_data
+stateful_data
