--- a/local/redis/Dockerfile
+++ b/local/redis/Dockerfile
@@ -5,4 +5,4 @@ ENV DATA_DIR /data
 
 COPY redis.conf /etc/redis/redis.conf
 
-CMD ['redis-server', '/etc/redis/redis.conf']
+#CMD ['redis-server', '/etc/redis/redis.conf']
