--- a/local/stacks/logging/docker-compose.yml
+++ b/local/stacks/logging/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.2'
+version: '3'
 services:
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.4.1 
@@ -9,7 +9,7 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - /docker/home/elastic-data:/usr/share/elasticsearch/data
+      - /home/docker/elastic-data:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
       - 9300:9300
@@ -18,15 +18,15 @@ services:
     deploy:
       placement:
         constraints:
-          - node.labels.redis == true
+          - node.labels.elasticsearch == true
 
   kibana:
     depends_on:
       - es01
     image: docker.elastic.co/kibana/kibana:7.4.1    
     volumes:
-      - ./../../elk/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml  
-      - /docker/home/kibana-data:/usr/share/kibana/data
+      - /home/docker/kibana.yml:/usr/share/kibana/config/kibana.yml  
+      - /home/docker/kibana-data:/usr/share/kibana/data
     networks:
       - esnet
     ports:
@@ -34,7 +34,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.labels.redis == true
+          - node.labels.kibana == true
 
   logstash:
     build: 
@@ -42,7 +42,7 @@ services:
       dockerfile: Dockerfile      
     depends_on:
       - es01
-    image: $GITLAB_REGISTRY/goglance/first-hammar:logstash-latest
+    image: registry.gitlab.com/goglance/first-hammar:logstash-1572718952
     env_file: 
       - logstash-development.env
     ports:
@@ -54,7 +54,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.labels.redis == true
+          - node.labels.logstash == true
 
 networks:
   esnet:
