--- a/local/stacks/logging/docker-compose.yml
+++ b/local/stacks/logging/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.2'
 services:
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.4.1 
@@ -8,14 +8,19 @@ services:
       memlock:
         soft: -1
         hard: -1
-    volumes:
-      - /home/docker/elastic-data:/usr/share/elasticsearch/data
+    volumes:      
+      - elastic-data:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
       - 9300:9300
     networks:
-      - esnet
+      - core-infra
     deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 10
+        window: 180s   
       placement:
         constraints:
           - node.labels.elasticsearch == true
@@ -28,10 +33,15 @@ services:
       - /home/docker/kibana.yml:/usr/share/kibana/config/kibana.yml  
       - /home/docker/kibana-data:/usr/share/kibana/data
     networks:
-      - esnet
+      - core-infra
     ports:
       - "5601:5601" 
     deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 10
+        window: 180s
       placement:
         constraints:
           - node.labels.kibana == true
@@ -48,15 +58,24 @@ services:
     ports:
       - '9600:9600'
       - '5228:5228/udp' 
-    networks:
-      - esnet   
+    networks:      
+      - core-infra
     command: ['/usr/share/logstash/bin/logstash']
     deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 10
+        window: 180s
       placement:
         constraints:
           - node.labels.logstash == true
 
-networks:
-  esnet:
-  dev-global-network:
+networks:  
+  core-infra:   
     external: true
+
+volumes:
+  elastic-data:            
+    driver: rexray  
+      
