--- a/staging/stacks/logging/docker-compose.yml
+++ b/staging/stacks/logging/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.4.1 
     env_file:
-      - development.env
+      - staging.env
     ulimits:
       memlock:
         soft: -1
@@ -30,7 +30,7 @@ services:
       - es01
     image: docker.elastic.co/kibana/kibana:7.4.1    
     volumes:
-      - /home/docker/kibana.yml:/usr/share/kibana/config/kibana.yml  
+      - kibana.yml:/usr/share/kibana/config/kibana.yml  
       - kibana-data:/usr/share/kibana/data
     networks:
       - core-infra
@@ -77,5 +77,5 @@ networks:
 
 volumes:
   elastic-data:            
-    driver: rexray  
+    driver: rexray/ebs
       
