--- a/staging/stacks/logging/logstash-development.env
+++ b/staging/stacks/logging/logstash-development.env
@@ -1,4 +1,4 @@
 UDP_PIPELINE_INPUT_HOST=0.0.0.0
 UDP_PIPELINE_INPUT_PORT=5228
-ELASTICSEARCH_HOST=192.168.99.106
+ELASTICSEARCH_HOST=logging_es01
 LOGSTASH_LOGLEVEL=debug
