Updated redis image

--- a/local/redis/Dockerfile
+++ b/local/redis/Dockerfile
@@ -5,4 +5,9 @@ ENV DATA_DIR /data
 
 COPY redis.conf /etc/redis/redis.conf
 
+RUN /bin/bash -c 'echo never > /sys/kernel/mm/transparent_hugepage/enabled'
+RUN /bin/bash -c 'echo "vm.overcommit_memory = 1" >> /etc/sysctl.conf'
+RUN /bin/bash -c 'echo "net.core.somaxconn=65535" >> /etc/systcl.conf && sysctl -p'
+
+
 #CMD ['redis-server', '/etc/redis/redis.conf']
