External 30 gb volume for postgres

--- a/staging/stacks/postgres/docker-compose.yml
+++ b/staging/stacks/postgres/docker-compose.yml
@@ -24,7 +24,9 @@ services:
  
 volumes:
   postgres-data:          
-      driver: rexray/ebs
+      # driver: rexray/ebs
+      external:
+        name: postgres_postgres-data
     
 
 networks:
