Changed to staging env files for logstash

--- a/staging/stacks/logging/staging.env
+++ b/staging/stacks/logging/staging.env
@@ -2,4 +2,4 @@ node.name=logging_es01
 discovery.seed_hosts=logging_es01
 cluster.initial_master_nodes=logging_es01
 cluster.name=elastic-logs-cluster
-"ES_JAVA_OPTS=-Xms512m -Xmx512m"
+"ES_JAVA_OPTS=-Xms1g -Xmx1g"
