--- a/staging/stacks/logging/docker-compose.yml
+++ b/staging/stacks/logging/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.4.1 
     env_file:
-      - development.env
+      - staging.env
     ulimits:
       memlock:
         soft: -1
@@ -41,7 +41,7 @@ services:
     #   - /home/docker/kibana.yml:/usr/share/kibana/config/kibana.yml  
     #   - /home/docker/kibana-data:/usr/share/kibana/data
     env_file:
-      - development-kibana.env
+      - staging-kibana.env
     networks:
       - core-infra
     ports:
@@ -64,7 +64,7 @@ services:
       - es01
     image: registry.gitlab.com/goglance/first-hammar:logstash-1572718952
     env_file: 
-      - logstash-development.env
+      - staging-logstash.env
     ports:
       - '9600:9600'
       - '5228:5228/udp' 
