--- a/local/elk/logstash/pipeline/docker-logstash.conf
+++ b/local/elk/logstash/pipeline/docker-logstash.conf
@@ -11,6 +11,7 @@ input {
 output {
   elasticsearch {
     hosts => ["http://${ELASTICSEARCH_HOST}:9200"]
+    index => "logstash-%{+yyyy.MM.dd}"
     codec => json_lines
 
   }
