Added index rollover policy

--- a/local/elk/logstash/pipeline/docker-logstash.conf
+++ b/local/elk/logstash/pipeline/docker-logstash.conf
@@ -10,8 +10,12 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["http://${ELASTICSEARCH_HOST}:9200"]    
+    hosts => ["http://${ELASTICSEARCH_HOST}:9200"]
+    index => "logstash-%{+yyyy.MM.dd}"
     codec => json_lines
+    ilm_rollover_alias => "logstash"    
+    ilm_pattern => "000001"
+    ilm_policy => "logstash-policy"
 
   }
   stdout {
